# evtx_elk

./: .gitignore  README.md
docker/: Dockerfile  Dockerfile.corporate  Dockerfile.home  docker-compose.yml  docker-compose.yml.corporate  docker-compose.yml.home
docker/files/: 0002_input_beats.conf  0003_input_csv.conf  0004_input_http.conf  0100_input_csv.conf  0101_input_http.conf  1000_syslog.conf  1001_nginx.conf  8900_postprocess_remove-empty-fields.conf  9999_output_es.conf  logstash-input.local.conf
docs/: docker-mac-readme.md  docker-windows-readme.md
evtxshipper/: README.md  pyproject.toml
evtxshipper/evtxshipper/: __main__.py
evtxshipper/evtxshipper/classes/: LogTransport.py
evtxshipper/tests/: conftest.py
