[tool.poetry]
name = "evtxshipper"
version = "0.0.1"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
authors = ["Tyler Bennett <tbennett6421@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tbennett6421/evtxshipper"
repository = "https://github.com/tbennett6421/evtxshipper"
exclude = ["tests"]
include = ["LICENSE"]
license = ""
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

packages = [
    { include = "evtxshipper"}
]

[tool.poetry.scripts]
evtxshipper = 'evtxshipper.__main__:main'

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
